--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,7 @@
         <button id="lineButton" class="button">線</button> 
         <button id="arrowButton" class="button">矢印</button> 
         <button id="dashButton" class="button">破線</button> 
+        <button id="numberButton" class="button">番号</button> 
         <button id="undoButton" class="button">戻る</button> 
         <button id="clearButton" class="button">全消去</button> 
         <button id="clearDrawButton" class="button">描画のみ消去</button> 
@@ -167,6 +168,7 @@
         const lineButton = document.getElementById('lineButton'); 
         const arrowButton = document.getElementById('arrowButton'); 
         const dashButton = document.getElementById('dashButton'); 
+        const numberButton = document.getElementById('numberButton'); // 新しい番号ボタンの要素を取得
         const undoButton = document.getElementById('undoButton'); 
         const clearButton = document.getElementById('clearButton'); 
         const clearDrawButton = document.getElementById('clearDrawButton'); 
@@ -187,7 +189,6 @@
         let shapes = []; 
         let historyIndex = -1; 
         let isFill = false; // 塗りつぶしフラグ 
-        let isSecondClick = false; 
         let currentShapeType = ''; 
         let canvasWidth = 297;  // A3縦サイズのmm 
         let canvasHeight = 420; 
@@ -195,6 +196,9 @@
         let imageRotationAngle = 0; // 画像の回転角度 
         const mmPerPixel = 96 / 25.4;  // 1インチあたりのピクセル数(96) / 1インチあたりのmm数(25.4) 
 
+        // 番号ツール用の新しい状態変数
+        let currentNumber = 1; // 現在配置する番号
+        
         // A3サイズのcanvasをピクセル単位で設定 
         canvas.width = canvasWidth * mmPerPixel; 
         canvas.height = canvasHeight * mmPerPixel; 
@@ -207,6 +211,7 @@
         lineButton.addEventListener('click', () => { setTool('line'); }); 
         arrowButton.addEventListener('click', () => { setTool('arrow'); }); 
         dashButton.addEventListener('click', () => { setTool('dash'); }); 
+        numberButton.addEventListener('click', () => { setTool('number'); }); // 番号ツールのイベントリスナー
         undoButton.addEventListener('click', undo); 
         clearButton.addEventListener('click', clearCanvas); 
         clearDrawButton.addEventListener('click', clearDraw); 
@@ -228,34 +233,87 @@
         controls.appendChild(rotateButton); 
         rotateButton.addEventListener('click', rotateImage); // 画像回転関数を割り当て 
 
+        /**
+         * 番号を丸囲み文字または通常の文字列として取得するヘルパー関数
+         * @param {number} num - 表示する数値
+         * @returns {string} 丸囲み文字または通常の文字列
+         */
+        function getCircledNumber(num) {
+            if (num >= 1 && num <= 20) {
+                return String.fromCodePoint(0x2460 + num - 1);
+            } else if (num > 20 && num <= 100) {
+                return num.toString();
+            }
+            return ''; // 範囲外の場合は空文字列
+        }
+
+        /**
+         * アクティブな描画ツールを設定し、ボタンの状態を更新します。
+         * @param {string} newTool - アクティブにするツール ('line', 'arrow', 'dash', 'rect', 'circle', 'triangle', 'number')。
+         */
         function setTool(newTool) { 
-            if (tool === newTool && (newTool === 'rect' || newTool === 'circle' || newTool === 'triangle')) { 
-                // 2回目のクリックで塗りつぶしトグル 
-                isFill = !isFill; 
-            } else { 
-                isFill = false; 
-            } 
+            // 図形ツールの塗りつぶし切り替えを処理
+            if (newTool === 'rect' || newTool === 'circle' || newTool === 'triangle') {
+                if (tool === newTool) { // 同じ図形ツールを再度クリックした場合
+                    isFill = !isFill; // 塗りつぶしを切り替える
+                } else { // 初めて図形ツールに切り替える場合、または他のツールから切り替える場合
+                    isFill = false; // デフォルトで塗りつぶしなし
+                }
+            } else { // 図形ツール以外に切り替える場合
+                isFill = false; // 図形ツール以外の場合は塗りつぶしをオフにする
+            }
 
-            tool = newTool; 
+            // 番号ツール固有のロジックを処理
+            if (newTool === 'number') {
+                if (tool === newTool) { // 番号ツールがすでにアクティブな場合、次の配置のために番号をインクリメント
+                    if (currentNumber < 100) {
+                        currentNumber++;
+                    } else {
+                        showMessage('番号は100までです。リセットされます。');
+                        currentNumber = 1; // 最大値に達したらリセット
+                    }
+                } else { // 番号ツールに切り替える場合、番号を1にリセット
+                    currentNumber = 1;
+                }
+            } else { // 番号ツール以外に切り替える場合、番号カウンターをリセット
+                currentNumber = 1;
+            }
 
-            if (newTool === 'dash') { 
+            tool = newTool; // 新しいアクティブなツールを設定
+
+            // ツールに基づいて線の種類を設定
+            if (tool === 'dash') { 
                 lineType = 'dashed'; 
             } else { 
                 lineType = 'solid'; 
             } 
 
-            // ボタン表示更新 
+            // ボタンの表示を更新（図形ツールの場合）
             rectButton.textContent = isFill ? '■' : '□'; 
             circleButton.textContent = isFill ? '●' : '●'; 
             triangleButton.textContent = isFill ? '▲' : '△'; 
 
-            // activeクラス更新 
-            lineButton.classList.toggle('active', tool === 'line'); 
-            arrowButton.classList.toggle('active', tool === 'arrow'); 
-            dashButton.classList.toggle('active', tool === 'dash'); 
-            rectButton.classList.toggle('active', tool === 'rect'); 
-            circleButton.classList.toggle('active', tool === 'circle'); 
-            triangleButton.classList.toggle('active', tool === 'triangle'); 
+            // 番号ボタンのテキストを更新
+            if (tool === 'number') {
+                numberButton.textContent = `番号 (${getCircledNumber(currentNumber)})`;
+            } else {
+                numberButton.textContent = '番号'; // 非アクティブな場合はテキストをリセット
+            }
+
+            // すべてのツールボタンから active クラスを削除
+            const allToolButtons = controls.querySelectorAll('.button');
+            allToolButtons.forEach(button => {
+                button.classList.remove('active');
+            });
+
+            // 現在選択されているツールボタンに active クラスを追加
+            if (tool === 'line') lineButton.classList.add('active');
+            else if (tool === 'arrow') arrowButton.classList.add('active');
+            else if (tool === 'dash') dashButton.classList.add('active');
+            else if (tool === 'rect') rectButton.classList.add('active');
+            else if (tool === 'circle') circleButton.classList.add('active');
+            else if (tool === 'triangle') triangleButton.classList.add('active');
+            else if (tool === 'number') numberButton.classList.add('active');
         } 
 
         function changeColor(event) { 
@@ -271,7 +329,31 @@
         canvas.addEventListener('mouseup', stopDrawing); 
         canvas.addEventListener('mouseleave', stopDrawing); 
 
+        /**
+         * 描画プロセスを開始するか、番号ツールがアクティブな場合は番号を配置します。
+         * @param {MouseEvent} event - マウスダウンイベント。
+         */
         function startDrawing(event) { 
+            // 番号ツールを個別に処理（クリックベースのアクションのため）
+            if (tool === 'number') {
+                const x = event.offsetX;
+                const y = event.offsetY;
+                const displayNum = getCircledNumber(currentNumber); // 表示用の番号を取得
+
+                shapes.push({
+                    type: 'number',
+                    number: displayNum, // 表示文字列を保存
+                    x: x,
+                    y: y,
+                    color: currentColor,
+                    fontSize: 20 // 番号のフォントサイズ
+                });
+                drawAll();
+                socket.emit('draw', shapes);
+                return; // 他の描画ロジックが実行されないようにここで終了
+            }
+
+            // 標準の描画ツールロジック（線、図形）
             drawing = true; 
             startX = event.offsetX; 
             startY = event.offsetY; 
@@ -334,9 +416,14 @@
             drawAll(); 
         } 
 
+        /**
+         * キャンバスをクリアし、すべての保存された図形と背景画像を描画します。
+         * 指定された描画順序に従います。
+         */
         function drawAll() { 
             ctx.clearRect(0, 0, canvas.width, canvas.height); 
-            // 画像を描画 
+            
+            // 1. 背景画像を描画（一番下）
             if (backgroundImage) { 
                 ctx.save(); // 現在のコンテキストを保存 
                 ctx.translate(canvas.width / 2, canvas.height / 2); // 画像の中心を回転の中心に移動 
@@ -345,11 +432,26 @@
                 ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height); 
                 ctx.restore(); // 保存したコンテキストを復元 
             } 
+
+            // 2. 図形（四角、円、三角）を描画
             shapes.forEach(shape => { 
-                drawLine(shape); 
-            }); 
+                if (shape.type === 'rect' || shape.type === 'circle' || shape.type === 'triangle') {
+                    drawLine(shape);
+                }
+            });
+
+            // 3. 番号、線、矢印、破線を描画（一番上）
+            shapes.forEach(shape => {
+                if (shape.type === 'number' || shape.type === 'line' || shape.type === 'arrow' || shape.type === 'dash') {
+                    drawLine(shape);
+                }
+            });
         } 
 
+        /**
+         * 単一の図形をそのプロパティに基づいてキャンバスに描画します。
+         * @param {Object} shape - 描画する図形オブジェクト。
+         */
         function drawLine(shape) { 
             ctx.strokeStyle = shape.color; 
             ctx.lineWidth = 2; 
@@ -414,7 +516,11 @@
                 } else { 
                     ctx.stroke(); 
                 } 
-            } 
+            } else if (shape.type === 'number') { // 番号の描画ロジック
+                ctx.font = `${shape.fontSize}px 'Press Start 2P', cursive`; // 番号のフォントを設定
+                ctx.fillStyle = shape.color; // 番号の色を設定
+                ctx.fillText(shape.number, shape.x, shape.y); // 番号を描画
+            }
         } 
 
         function undo() { 
@@ -569,6 +675,9 @@
             }; 
             img.src = url; 
         }); 
+
+        // 初期ツール設定とボタン状態の更新
+        setTool('line');
 
     </script> 
 </body> 
